modified heavy images

--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Miguel Munoz</title>
-  <link rel="icon" href="logoDB2.png" />
+  <link rel="icon" href="images/logoDB2.png" />
   <link rel="stylesheet" href="styles.css">
 
 
@@ -15,9 +15,9 @@
     <nav>
       <span class="toggle-icon"> &#9776;</span>
       <ul>
-        <img src="logo.png" alt="">
+        <img src="images/logo.png" alt="">
 
-        <li> <a href="index.html">home</a> </li>
+        <li> <a href="home.html">home</a> </li>
         <li> <a href="resume.html">resume</a> </li>
         <li> <a href="projects.html#">projects</a> </li>
         <li> <a href="gallery.html">Gallery</a> </li>
