--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Miguel Munoz</title>
-  <link rel="icon" href="logoDB2.png" />
+  <link rel="icon" href="images/logoDB2.png" />
   <link rel="stylesheet" href="styles.css">
 
 
@@ -60,7 +60,7 @@
       </ul>
     </div>
   </section>
-    <a href="resume.pdf#"><div id="button">download resume  </div></a>
+    <a href="resume.pdf"><div id="button">download resume  </div></a>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="javascript.js"> </script>
