--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Miguel Munoz</title>
-  <link rel="icon" href="logoDB2.png" />
+  <link rel="icon" href="images/logoDB2.png" />
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -13,9 +13,9 @@
     <nav id="">
       <span class="toggle-icon"> &#9776;</span>
       <ul>
-        <img src="logo.png" alt="">
+        <img src="images/logo.png" alt="">
 
-        <li> <a href="index.html">home</a> </li>
+        <li> <a href="home.html">home</a> </li>
         <li> <a href="resume.html">resume</a> </li>
         <li> <a href="projects.html#">projects</a> </li>
         <li> <a href="gallery.html">Gallery</a> </li>
@@ -25,15 +25,15 @@
   </header>
 
   <div>
-    <img src="logo.png" alt="" title="Contact me!">
+    <img src="images/logo.png" alt="" title="Contact me!">
     <section>
       <p>miguel munoz</p>
       <section id="social-media">
-        <a id="sm-icon" href="#"> <img src="facebook.png" alt="facebook"> </a>
-        <a id="sm-icon" href="#"> <img src="facebook.png" alt=""> </a>
-        <a id="sm-icon" href="#"> <img src="github-logo.png" alt="github"> </a>
-        <a id="sm-icon" href="#"> <img src="coding.png" alt="code"> </a>
-        <a id="sm-icon" href="#"> <img src="social-linkedin.png" alt="linkedIn"> </a>
+        <a id="sm-icon" href="#"> <img src="images/facebook.png" alt="facebook"> </a>
+        <a id="sm-icon" href="#"> <img src="images/facebook.png" alt=""> </a>
+        <a id="sm-icon" href="#"> <img src="images/github-logo.png" alt="github"> </a>
+        <a id="sm-icon" href="#"> <img src="images/coding.png" alt="code"> </a>
+        <a id="sm-icon" href="#"> <img src="images/social-linkedin.png" alt="linkedIn"> </a>
       </section>
 
       <p> send me an email c: </p>
