--- a/index.html
+++ b/index.html
@@ -1,53 +1,61 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
-  <meta charset="utf-8">
-  <title>Miguel Munoz</title>
-  <link rel="icon" href="logoDB2.png" />
-  <link rel="stylesheet" href="styles.css">
-
-
-</head>
-
-<body>
-  <header>
-    <nav>
-      <span class="toggle-icon"> &#9776;</span>
-      <ul>
-        <img src="logo.png" alt="">
-
-        <li> <a href="index.html">home</a> </li>
-        <li> <a href="resume.html">resume</a> </li>
-        <li> <a href="projects.html">projects</a> </li>
-        <li> <a href="gallery.html">Gallery</a> </li>
-        <li> <a href="contact.html">Contact </a> </li>
-      </ul>
-    </nav>
-  </header>
-
-  <section id="about">
-    <h1>about</h1>
-    <hr>
-    <section>
-      <img src="blackboard1.jpg" title="Miguel Munoz">
-      <p>this miguel munoz ijos de la vrg Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </section>
-    <a href="resume.pdf#"><div id="button">something</div></a>
-  </section>
+  <head>
+    <meta charset="utf-8">
+    <title>Miguel Munoz</title>
+    <link href="https://fonts.googleapis.com/css?family=Exo|Kanit|Play" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/logoDB2.png" />
 
 
-  <footer id="contact">
-    <a href="contact.html#">
-      <img src="logo.png" alt="" title="Contact me!">
-    </a>
-    <p>copyright under my ass</p>
-  </footer>
+  </head>
+  <body class="homepage">
+     <header class="glitch-img home-page">
+       <div class="block">
+         <a href="home.html">
+           <img class="logo" src="images/logo.png" title="Miguel Munoz's logo">
+           <p id="lp"> Hello </p>
+           <h3 class="dinamic-message"></h3>
+         </a>
+       </div>
+     </header>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="javascript.js"> </script>
+     <!--JQuery, Js, and Plugins  -->
+     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+     <script src="javascript.js"> </script>
+     <script src="mgGlitch.min.js"></script>
+     <script>
+     //let = var = ?? scope difference
+     //this is a dynamic message that is not working
+     let getBody = document.body;
 
-</body>
+     // let newElement = document.createElement("h1");
 
+     //create date object
+     let date = new Date();
+     // get hour of our object
+     let currentHour = date.getHours();
+
+     let createTxtMsg;
+     if (currentHour >= 4 && currentHour < 10) {
+       createTxtMsg = "Good morning!"
+     }else if (currentHour >= 10 && currentHour < 12) {
+       createTxtMsg = "Good day!";
+     }else if (currentHour >= 12 && currentHour < 18) {
+       createTxtMsg = "Good afternoon!";
+     }else if (currentHour >= 18 && currentHour < 20) {
+       createTxtMsg = "Good evening!";
+     }else if (currentHour >= 20 && currentHour < 4) {
+       createTxtMsg = "Good night!";
+     }else {
+       createTxtMsg = "Good night!"
+     }
+
+     //cretae text node
+     let createEleTxt = document.createTextNode(createTxtMsg);
+     document.querySelector(".dinamic-message").appendChild(createEleTxt); // element created with the text inside of it
+     getBody.appendChild(newElement);
+
+     </script>
+  </body>
 </html>
