orginized files in folders

--- a/html/contact.html
+++ b/html/contact.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Miguel Munoz</title>
-  <link rel="icon" href="images/logoDB2.png" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="../images/logoDB2.png" />
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body id="contact-page">
@@ -13,7 +13,7 @@
     <nav id="">
       <span class="toggle-icon"> &#9776;</span>
       <ul>
-        <img src="images/logo.png" alt="">
+        <img src="../images/logo.png" alt="">
 
         <li> <a href="home.html">home</a> </li>
         <li> <a href="resume.html">resume</a> </li>
@@ -25,15 +25,15 @@
   </header>
 
   <div>
-    <img src="images/logo.png" alt="" title="Contact me!">
+    <img src="../images/logo.png" alt="" title="Contact me!">
     <section>
       <p>miguel munoz</p>
       <section id="social-media">
-        <a id="sm-icon" href="#"> <img src="images/facebook.png" alt="facebook"> </a>
-        <a id="sm-icon" href="#"> <img src="images/facebook.png" alt=""> </a>
-        <a id="sm-icon" href="#"> <img src="images/github-logo.png" alt="github"> </a>
-        <a id="sm-icon" href="#"> <img src="images/coding.png" alt="code"> </a>
-        <a id="sm-icon" href="#"> <img src="images/social-linkedin.png" alt="linkedIn"> </a>
+        <a id="sm-icon" href="#"> <img src="../images/facebook.png" alt="facebook"> </a>
+        <a id="sm-icon" href="#"> <img src="../images/facebook.png" alt=""> </a>
+        <a id="sm-icon" href="https://github.com/miguelmunozh"> <img src="../images/github-logo.png" alt="github"> </a>
+        <a id="sm-icon" href="https://miguelmunozh.github.io"> <img src="../images/coding.png" alt="code"> </a>
+        <a id="sm-icon" href="https://www.linkedin.com/in/miguel-munoz-175478170"> <img src="../images/social-linkedin.png" alt="linkedIn"> </a>
       </section>
 
       <p> send me an email c: </p>
@@ -43,7 +43,7 @@
   </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="javascript.js"> </script>
+  <script src="../js/javascript.js"> </script>
 
 </body>
 
