--- a/html/index.html
+++ b/html/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Miguel Munoz</title>
     <link href="https://fonts.googleapis.com/css?family=Exo|Kanit|Play" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="images/logoDB2.png" />
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="icon" href="../images/logo.png" />
 
 
   </head>
@@ -13,7 +13,7 @@
      <header class="glitch-img home-page">
        <div class="block">
          <a href="home.html">
-           <img class="logo" src="images/logo.png" title="Miguel Munoz's logo">
+           <img class="logo" src="../images/logo.png" title="Miguel Munoz's logo">
            <p id="lp"> Hello </p>
            <h3 class="dinamic-message"></h3>
          </a>
@@ -22,8 +22,8 @@
 
      <!--JQuery, Js, and Plugins  -->
      <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-     <script src="javascript.js"> </script>
-     <script src="mgGlitch.min.js"></script>
+     <script src="../js/javascript.js"> </script>
+     <script src="../js/mgGlitch.min.js"></script>
      <script>
      //let = var = ?? scope difference
      //this is a dynamic message that is not working
