--- a/html/home.html
+++ b/html/home.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Miguel Munoz</title>
-  <link rel="icon" href="images/logoDB2.png" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="../images/logoDB2.png" />
+  <link rel="stylesheet" href="../css/styles.css">
 
 
 </head>
@@ -15,7 +15,7 @@
     <nav>
       <span class="toggle-icon"> &#9776;</span>
       <ul>
-        <img src="images/logo.png" alt="">
+        <img src="../images/logo.png" alt="">
 
         <li> <a href="home.html">home</a> </li>
         <li> <a href="resume.html">resume</a> </li>
@@ -30,23 +30,23 @@
     <h1>about</h1>
     <hr>
     <section>
-      <img src="images/jlk.jpg" title="Miguel Munoz">
+      <img src="../images/jlk.jpg" title="Miguel Munoz">
       <p>this miguel munoz ijos de la vrg Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
         ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
-    <a href="resume.pdf"><div id="button">something</div></a>
+    <a href="../files/MIGUEL_MUNOZ_RESUME.pdf"><div id="button">something</div></a>
   </section>
 
 
   <footer id="contact">
-    <a href="contact.html#">
-      <img src="images/logo.png" alt="" title="Contact me!">
+    <a href="contact.html">
+      <img src="../images/logo.png" alt="" title="Contact me!">
     </a>
-    <p>copyright under my ass</p>
+    <p>Copyright 2019 Miguel Munoz</p>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="javascript.js"> </script>
+  <script src="../js/javascript.js"> </script>
 
 </body>
 
