added new dumy images

--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Miguel Munoz</title>
-  <link rel="icon" href="../images/logoDB2.png" />
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="icon" href="images/logoDB2.png" />
+  <link rel="stylesheet" href="css/styles.css">
 
 
 </head>
@@ -15,7 +15,7 @@
     <nav>
       <span class="toggle-icon"> &#9776;</span>
       <ul>
-        <img src="../images/logo.png" alt="">
+        <img src="images/logo.png" alt="">
 
         <li> <a href="home.html">home</a> </li>
         <li> <a href="resume.html">resume</a> </li>
@@ -35,7 +35,7 @@
       <a href="PROJECTPAGE#">
       <h2>title</h2>
       <hr>
-      <img src="../images/c.jpg" alt=""></a>
+      <img src="images/c.jpg" alt=""></a>
       <p>- css, javascript, java</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing onsectetur adipisicing onsectetur adipisicing onsectetur adipisicing elit, sed do eiusmod tempor incididun.</p>
     </section>
@@ -43,35 +43,35 @@
       <a href="PROJECTPAGE#">
       <h2>title</h2>
       <hr>
-      <img src="../images/c.jpg" alt=""></a>
+      <img src="images/c.jpg" alt=""></a>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing onsectetur adipisicing onsectetur adipisicing onsectetur adipisicing elit, sed do eiusmod tempor incididun.</p>
     </section>
     <section id="project">
       <a href="PROJECTPAGE#">
       <h2>title</h2>
       <hr>
-      <img src="../images/c.jpg" alt=""></a>
+      <img src="images/c.jpg" alt=""></a>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing onsectetur adipisicing onsectetur adipisicing onsectetur adipisicing elit, sed do eiusmod tempor incididun.</p>
     </section>
     <section id="project">
       <a href="PROJECTPAGE#">
       <h2>title</h2>
       <hr>
-      <img src="../images/c.jpg" alt=""></a>
+      <img src="images/c.jpg" alt=""></a>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing onsectetur adipisicing onsectetur adipisicing onsectetur adipisicing elit, sed do eiusmod tempor incididun.</p>
     </section>
     <section id="project">
       <a href="PROJECTPAGE#">
       <h2>title</h2>
       <hr>
-      <img src="../images/c.jpg" alt=""></a>
+      <img src="images/c.jpg" alt=""></a>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing onsectetur adipisicing onsectetur adipisicing onsectetur adipisicing elit, sed do eiusmod tempor incididun.</p>
     </section>
     <section id="project">
       <a href="PROJECTPAGE#">
       <h2>title</h2>
       <hr>
-      <img src="../images/c.jpg" alt=""></a>
+      <img src="images/c.jpg" alt=""></a>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing onsectetur adipisicing onsectetur adipisicing onsectetur adipisicing elit, sed do eiusmod tempor incididun.</p>
     </section>
   </section>
@@ -80,12 +80,12 @@
 
   <footer id="contact">
     <a href="contact.html">
-      <img src="../images/logo.png" alt="" title="Contact me!">
+      <img src="images/logo.png" alt="" title="Contact me!">
     </a>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="../js/javascript.js"> </script>
+  <script src="js/javascript.js"> </script>
 
 </body>
 
