--- a/gallery.html
+++ b/gallery.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>Miguel Munoz</title>
   <link rel="icon" href="logoDB2.png" />
-  <link rel="stylesheet" href="../css/styles.css">
-  <script src="../js/jquery-3.3.1.min.js"></script>
+  <link rel="stylesheet" href="css/styles.css">
+  <script src="js/jquery-3.3.1.min.js"></script>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
   <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
@@ -19,7 +19,7 @@
     <nav>
       <span class="toggle-icon"> &#9776;</span>
       <ul>
-        <img src="../images/logo.png" alt="">
+        <img src="images/logo.png" alt="">
 
         <li> <a href="index.html">home</a> </li>
         <li> <a href="resume.html">resume</a> </li>
@@ -40,7 +40,7 @@
     <section id="gallery">
       <div id="Gallery-image">
         <a data-fancybox="gallery" href="flower-banner1.jpg" src="flower-banner1.jpg">
-          <img src="../images/c.jpg" alt="">
+          <img src="images/c.jpg" alt="">
         </a>
         <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -48,7 +48,7 @@
 
       <div id="Gallery-image">
         <a data-fancybox="gallery" href="flower-banner1.jpg" src="flower-banner1.jpg">
-          <img src="../images/c.jpg" alt="">
+          <img src="images/c.jpg" alt="">
         </a>
         <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -56,7 +56,7 @@
 
       <div id="Gallery-image">
         <a data-fancybox="gallery" href="flower-banner1.jpg" src="flower-banner1.jpg">
-          <img src="../images/c.jpg" alt="">
+          <img src="images/c.jpg" alt="">
         </a>
         <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -64,7 +64,7 @@
 
       <div id="Gallery-image">
         <a data-fancybox="gallery" href="flower-banner1.jpg" src="flower-banner1.jpg">
-          <img src="../images/c.jpg" alt="">
+          <img src="images/c.jpg" alt="">
         </a>
         <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -76,12 +76,12 @@
 
   <footer id="contact">
     <a href="contact.html">
-      <img src="../images/logo.png" alt="" title="Contact me!">
+      <img src="images/logo.png" alt="" title="Contact me!">
     </a>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="../js/javascript.js"> </script>
+  <script src="js/javascript.js"> </script>
 
 </body>
 
