--- a/resume.html
+++ b/resume.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Miguel Munoz</title>
-  <link rel="icon" href="../images/logo.png" />
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="icon" href="images/logo.png" />
+  <link rel="stylesheet" href="css/styles.css">
 
 
 </head>
@@ -60,10 +60,10 @@
       </ul>
     </div>
   </section>
-    <a href="../files/MIGUEL_MUNOZ_RESUME.pdf"><div id="button">download resume  </div></a>
+    <a href="files/MIGUEL_MUNOZ_RESUME.pdf"><div id="button">download resume  </div></a>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="../js/javascript.js"> </script>
+  <script src="js/javascript.js"> </script>
 
 </body>
 
