made improvements to the resume page, but is still missing information

--- a/resume.html
+++ b/resume.html
@@ -24,11 +24,11 @@
         miguelmunozh@outlook.com</p>
     </aside>
     <div>
-      <h2>employment history</h2>
+      <h2>Experience</h2>
       <ul>
-        <h4>employment name</h4>
-        <h4>employment description</h4>
-        <li>-</li>
+        <h4>Family Dollar</h4>
+        <h4>Cashier & Seasonal Remodel Team Member. El Paso Texas May to August 2019.</h4>
+        <li>- Completed all cleaning and organizing tasks as assigned. As well as remodeling activities like remove and install fixtures as well as stock products on shelves and unload trucks.</li>
         <li>-</li>
         <li>-</li>
         <h4>employment name</h4>
@@ -40,23 +40,34 @@
       <hr>
       <h2>academic background</h2>
       <ul>
-        <h4>school name</h4>
-        <h4>tittle description</h4>
-        <li>-</li>
-        <li>-</li>
-        <li>-</li>
-        <h4>school name</h4>
-        <h4>tittle description</h4>
-        <li>-</li>
-        <li>-</li>
-        <li>-</li>
+        <h4>UTEP</h4>
+        <h4>BS in Computer Science</h4>
+        <li>- University of Texas and El Paso, El Paso Texas // expecting to graduate in Dec. 2020</li>
+        <h4>EPCC</h4>
+        <h4>Associate of Arts - Computer Science</h4>
+        <li>- El Paso community college – valle Verde campus - EPCC VV El Paso TX // 2018.</li>
       </ul>
       <hr>
-      <h2>main interests</h2>
+      <h2>Programming Projects</h2>
       <ul>
-        <li>-</li>
-        <li>-</li>
-        <li>-</li>
+
+        <h4>Web Development</h4>
+        <li>- Developed and structured my own portfolio website //Summer 2019</li>
+
+        <h4>Coding a prize watcher Application in Java // Fall 2018</h4>
+        <li>- Created a prize watcher application utilizing techniques like web scrapping and data persistence (Java Platform SE 7) with capabilities of adding an object from a website store like amazon and check for the prize and keep track of the price from the application.</li>
+
+      </ul>
+      <hr>
+
+      <h2>Proficiencies</h2>
+      <ul>
+        <li>- Python</li>
+        <li>- Java</li>
+        <li>- Html/Css,Javascript/JQuery</li>
+        <li>- Php</li>
+        <li>- MySQL</li>
+        <li>- Bilingual- Spanish/English</li>
       </ul>
     </div>
   </section>
