--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Miguel Munoz</title>
-  <link rel="icon" href="logoDB2.png" />
+  <link rel="icon" href="logo.png" />
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/jquery-3.3.1.min.js"></script>
 
@@ -22,7 +22,7 @@
         <img src="images/logo.png" alt="">
 
         <li> <a href="index.html">home</a> </li>
-        <li> <a href="resume.html">resume</a> </li>
+        <li> <a href="resume.html" target="_blank">resume</a> </li>
         <li> <a href="projects.html">projects</a> </li>
         <li> <a href="gallery.html">Gallery</a> </li>
         <li> <a href="contact.html">Contact </a> </li>
