modified the objective of hom page

--- a/home.html
+++ b/home.html
@@ -31,10 +31,21 @@
     <hr>
     <section>
       <img src="images/jlk.jpg" title="Miguel Munoz">
-      <p>this miguel munoz ijos de la vrg Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>
+        My name is Miguel Munoz and I am a CS graduate student from UTEP. Seeking
+        for professional development in any computer science field. I think of
+        me as a person with adaptability skills, ability to work in teams,
+        follow instructions, and the ability to learn new technologies quickly
+        as well as proficiency with programming languages, including Java,
+        HTML5/CSS, JavaScript and python. Interested in either tester or entry
+        level positions. You are right know on a website fully built by me
+        using technologies like HTML5/CSS, Javascript and PHP. One of the things
+        that passionate me the most is photography, I really appreciate a good
+        spot to take a good picture of a beautiful landscape, I like specially
+        the clouds!!!
+</p>
     </section>
-    <a href="files/MIGUEL_MUNOZ_RESUME.pdf"><div id="button">something</div></a>
+    <a href="files/MIGUEL_MUNOZ_RESUME.pdf"><div id="button">Resume</div></a>
   </section>
 
 
@@ -43,6 +54,7 @@
       <img src="images/logo.png" alt="" title="Contact me!">
     </a>
     <p>Copyright 2019 Miguel Munoz</p>
+    <br>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
