--- a/contact.html
+++ b/contact.html
@@ -29,14 +29,11 @@
     <section>
       <p>miguel munoz</p>
       <section id="social-media">
-        <a id="sm-icon" href="#"> <img src="images/facebook.png" alt="facebook"> </a>
-        <a id="sm-icon" href="#"> <img src="images/instagram.png" alt=""> </a>
         <a id="sm-icon" href="https://github.com/miguelmunozh"> <img src="images/github-logo.png" alt="github"> </a>
         <a id="sm-icon" href="https://miguelmunozh.github.io"> <img src="images/coding.png" alt="code"> </a>
-        <a id="sm-icon" href="https://www.linkedin.com/in/miguel-munoz-175478170"> <img src="images/social-linkedin.png" alt="linkedIn"> </a>
       </section>
 
-      <p> send me an email c: </p>
+      <p>send me an email</p>
       <p>miguelmunozh@outlook.com</p>
 
     </section>
