changed profile picture

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
     <h1>about</h1>
     <hr>
     <section>
-      <img src="images/jlk.jpg" title="Miguel Munoz">
+      <img src="images/copy2.jpg" title="Miguel Munoz">
       <p>
         My name is Miguel Munoz and I am a CS graduate student from UTEP. Seeking
         for professional development in any computer science field. I think of
