removed the resume section

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <img src="images/logo.png" alt="">
 
         <li> <a href="home.html">home</a> </li>
-        <li> <a href="resume.html" target="_blank">resume</a> </li>
+        <!-- <li> <a href="resume.html" target="_blank">resume</a> </li> -->
         <li> <a href="projects.html#">projects</a> </li>
         <li> <a href="gallery.html">Gallery</a> </li>
         <li> <a href="contact.html">Contact </a> </li>
@@ -30,11 +30,12 @@
       <p>miguel munoz</p>
       <section id="social-media">
         <a id="sm-icon" href="https://github.com/miguelmunozh"> <img src="images/github-logo.png" alt="github"> </a>
-        <a id="sm-icon" href="https://miguelmunozh.github.io"> <img src="images/coding.png" alt="code"> </a>
+        <a id="sm-icon" href="https://www.linkedin.com/in/miguel-munoz-175478170/"> <img src="images/social-linkedin.png" alt="code"> </a>
       </section>
 
-      <p>send me an email</p>
+      <p>Send me an email</p>
       <p>miguelmunozh@outlook.com</p>
+      <p>915-800 9247</p>
 
     </section>
   </div>
