--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
       <p>Lorem ipsin voluptate velit esse cillum dolore eu fugiat nulla pariatur. Exm id est laborum.</p>
       <h2>contact me</h2>
       <p>Miguel Munoz. <br>
-        Phone: 915-666-66-66 <br>
+        Phone: 915-800<br>
         miguelmunozh@outlook.com</p>
     </aside>
     <div>
