--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
         <img src="images/logo.png" alt="">
 
         <li> <a href="index.html">home</a> </li>
-        <li> <a href="resume.html" target="_blank">resume</a> </li>
+        <!-- <li> <a href="resume.html" target="_blank">resume</a> </li> -->
         <li> <a href="projects.html">projects</a> </li>
         <li> <a href="gallery.html">Gallery</a> </li>
         <li> <a href="contact.html">Contact </a> </li>
