--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
         <img src="images/logo.png" alt="">
 
         <li> <a href="home.html">home</a> </li>
-        <li> <a href="resume.html" target="_blank">resume</a> </li>
+        <!-- <li> <a href="resume.html" target="_blank">resume</a> </li> -->
         <li> <a href="projects.html#">projects</a> </li>
         <li> <a href="gallery.html">Gallery</a> </li>
         <li> <a href="contact.html">Contact </a> </li>
