made modifications to show the images of the gallery

--- a/gallery.html
+++ b/gallery.html
@@ -47,7 +47,7 @@
       </div>
 
       <div id="Gallery-image">
-        <a data-fancybox="gallery" href="flower-banner1.jpg" src="flower-banner1.jpg">
+        <a data-fancybox="gallery" href="flower-banner1.jpg" src="images/flower-banner1.jpg">
           <img src="images/c.jpg" alt="">
         </a>
         <hr>
