--- a/gallery.html
+++ b/gallery.html
@@ -39,7 +39,7 @@
 
     <section id="gallery">
       <div id="Gallery-image">
-        <a data-fancybox="gallery" href="flower-banner1.jpg" src="flower-banner1.jpg">
+        <a data-fancybox="gallery" href="flower-banner1.jpg" src="images/flower-banner1.jpg">
           <img src="images/c.jpg" alt="">
         </a>
         <hr>
@@ -55,7 +55,7 @@
       </div>
 
       <div id="Gallery-image">
-        <a data-fancybox="gallery" href="flower-banner1.jpg" src="flower-banner1.jpg">
+        <a data-fancybox="gallery" href="images/flower-banner1.jpg" src="images/flower-banner1.jpg">
           <img src="images/c.jpg" alt="">
         </a>
         <hr>
@@ -63,7 +63,7 @@
       </div>
 
       <div id="Gallery-image">
-        <a data-fancybox="gallery" href="flower-banner1.jpg" src="flower-banner1.jpg">
+        <a data-fancybox="gallery" href="flower-banner1.jpg" src="images/flower-banner1.jpg">
           <img src="images/c.jpg" alt="">
         </a>
         <hr>
