--- a/gallery.html
+++ b/gallery.html
@@ -55,7 +55,7 @@
       </div>
 
       <div id="Gallery-image">
-        <a data-fancybox="gallery" href="images/flower-banner1.jpg" src="images/flower-banner1.jpg">
+        <a data-fancybox="gallery" href="images/flower-banner1.jpg" src="images/c.jpg">
           <img src="images/c.jpg" alt="">
         </a>
         <hr>
