--- a/projects.html
+++ b/projects.html
@@ -32,47 +32,12 @@
 <section id="projects">
 
     <section id="project">
-      <a href="PROJECTPAGE#">
+      <a href="https://github.com/miguelmunozh/pass-gen" target="_blank">
       <h2>title</h2>
       <hr>
-      <img src="images/c.jpg" alt=""></a>
-      <p>- css, javascript, java</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing onsectetur adipisicing onsectetur adipisicing onsectetur adipisicing elit, sed do eiusmod tempor incididun.</p>
-    </section>
-    <section id="project">
-      <a href="PROJECTPAGE#">
-      <h2>title</h2>
-      <hr>
-      <img src="images/c.jpg" alt=""></a>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing onsectetur adipisicing onsectetur adipisicing onsectetur adipisicing elit, sed do eiusmod tempor incididun.</p>
-    </section>
-    <section id="project">
-      <a href="PROJECTPAGE#">
-      <h2>title</h2>
-      <hr>
-      <img src="images/c.jpg" alt=""></a>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing onsectetur adipisicing onsectetur adipisicing onsectetur adipisicing elit, sed do eiusmod tempor incididun.</p>
-    </section>
-    <section id="project">
-      <a href="PROJECTPAGE#">
-      <h2>title</h2>
-      <hr>
-      <img src="images/c.jpg" alt=""></a>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing onsectetur adipisicing onsectetur adipisicing onsectetur adipisicing elit, sed do eiusmod tempor incididun.</p>
-    </section>
-    <section id="project">
-      <a href="PROJECTPAGE#">
-      <h2>title</h2>
-      <hr>
-      <img src="images/c.jpg" alt=""></a>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing onsectetur adipisicing onsectetur adipisicing onsectetur adipisicing elit, sed do eiusmod tempor incididun.</p>
-    </section>
-    <section id="project">
-      <a href="PROJECTPAGE#">
-      <h2>title</h2>
-      <hr>
-      <img src="images/c.jpg" alt=""></a>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing onsectetur adipisicing onsectetur adipisicing onsectetur adipisicing elit, sed do eiusmod tempor incididun.</p>
+      <img src="images/pass-gen.jpg" alt=""></a>
+      <p>- c++</p>
+      <p>pass-gen is a random alphanumeric password generator which get the values of the characters based on the ascii table.</p>
     </section>
   </section>
 
