--- a/gallery.html
+++ b/gallery.html
@@ -41,34 +41,32 @@
 
     <section id="gallery">
       <div id="Gallery-image">
-
         <a class="fancybox" rel="group" href="images/c.jpg">
-          <img src="images/c.jpg" alt="" /></a>
-
-
-        <hr>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-      </div>
-
-      <div id="Gallery-image">
-        <a data-fancybox="gallery" href="flower-banner1.jpg" src="images/flower-banner1.jpg">
-          <img src="images/c.jpg" alt="">
+          <img src="images/c.jpg" alt="" />
         </a>
         <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       </div>
 
       <div id="Gallery-image">
-        <a data-fancybox="gallery" href="images/c.jpg" src="images/c.jpg">
-          <img src="images/c.jpg" alt="">
+        <a class="fancybox" rel="group" href="images/c.jpg">
+          <img src="images/c.jpg" alt="" />
         </a>
         <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       </div>
 
       <div id="Gallery-image">
-        <a data-fancybox="gallery" href="flower-banner1.jpg" src="images/flower-banner1.jpg">
-          <img src="images/c.jpg" alt="">
+        <a class="fancybox" rel="group" href="images/c.jpg">
+          <img src="images/c.jpg" alt="" />
+        </a>
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      </div>
+
+      <div id="Gallery-image">
+        <a class="fancybox" rel="group" href="images/c.jpg">
+          <img src="images/c.jpg" alt="" />
         </a>
         <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
