--- a/gallery.html
+++ b/gallery.html
@@ -40,38 +40,38 @@
 
     <section id="gallery">
       <div id="Gallery-image">
-<a data-fancybox="gallery" href="images/c.jpg"><img src="images/c.jpg"></a>
-        <hr>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-      </div>
-
-      <div id="Gallery-image">
-        <a class="fancybox" rel="group" href="images/c.jpg">
-          <img src="images/c.jpg" alt="" />
+        <a data-fancybox="gallery" href="images/c.jpg">
+          <img src="images/c.jpg">
         </a>
         <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       </div>
 
       <div id="Gallery-image">
-        <a class="fancybox" rel="group" href="images/c.jpg">
-          <img src="images/c.jpg" alt="" />
+        <a data-fancybox="gallery" href="images/c.jpg">
+          <img src="images/c.jpg">
         </a>
         <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       </div>
 
       <div id="Gallery-image">
-        <a class="fancybox" rel="group" href="images/c.jpg">
-          <img src="images/c.jpg" alt="" />
+        <a data-fancybox="gallery" href="images/c.jpg">
+          <img src="images/c.jpg">
+        </a>
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      </div>
+
+      <div id="Gallery-image">
+        <a data-fancybox="gallery" href="images/c.jpg">
+          <img src="images/c.jpg">
         </a>
         <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       </div>
     </section>
-
   </section>
-
 
   <footer id="contact">
     <a href="contact.html">
