--- a/projects.html
+++ b/projects.html
@@ -30,16 +30,16 @@
     <p id="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <hr>
 <section id="projects">
-  <a href="https://github.com/miguelmunozh/pass-gen" target="_blank">
+
     <section id="project">
+      <a href="https://github.com/miguelmunozh/pass-gen" target="_blank">
       <h2>Pass-Gen</h2>
       <hr>
-      <img src="images/pass-gen.jpg" alt="">
+      <img src="images/pass-gen.png" alt="">
+    </a>
       <p>- c++</p>
       <p>pass-gen is a random alphanumeric password generator which get the values of the characters based on the ascii table.</p>
     </section>
-  </a>
-
   </section>
 
   </section>
