added some pictures to my gallery

--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
   </header>
 
   <section id="about">
-    <h1>about</h1>
+    <h1>About Me</h1>
     <hr>
     <section>
       <img src="images/copy2.jpg" title="Miguel Munoz">
