--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,8 @@
   </header>
   <section id="projects-section">
     <h1>projects</h1>
-    <p id="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p id="intro">This projects section provides the visitor with a collection of projects that have been developed by my self.
+    By clicking on a project you will be redirected to the github page where the project and installation instructions reside. </p>
     <hr>
 <section id="projects">
 
