--- a/gallery.html
+++ b/gallery.html
@@ -33,9 +33,12 @@
 
   <section id="Gallery-section">
     <h1>Gallery</h1>
-    <p id="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Duis
-      aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p id="intro">Clouds are the most beautiful thing this world has to offer. </p>
+    <p id="intro">“No doubt the phenomena of cloud formation are designed primarily to water the earth;
+      to gather together the moisture from the salt sea, and form dark, unwholesome fens; to purify
+      them by the mysterious alchemy of the sky; to carry them onward by sweeping storm or by gentle
+      zephyr, and let them descend gently in the mist, or steadily in the rain, which will waken
+      sleeping seeds, and revive drooping vegetation.” ― Alfred Rowland </p>
     <hr>
 
     <section id="gallery">
@@ -44,31 +47,31 @@
           <img src="images/c.jpg">
         </a>
         <hr>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
       </div>
 
       <div id="Gallery-image">
-        <a data-fancybox="gallery" href="images/c.jpg">
-          <img src="images/c.jpg">
+        <a data-fancybox="gallery" href="images/1.jpg">
+          <img src="images/1.jpg">
         </a>
         <hr>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <p></p>
       </div>
 
       <div id="Gallery-image">
-        <a data-fancybox="gallery" href="images/c.jpg">
-          <img src="images/c.jpg">
+        <a data-fancybox="gallery" href="images/2.jpg">
+          <img src="images/2.jpg">
         </a>
         <hr>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <p></p>
       </div>
 
       <div id="Gallery-image">
-        <a data-fancybox="gallery" href="images/c.jpg">
-          <img src="images/c.jpg">
+        <a data-fancybox="gallery" href="images/3.jpg">
+          <img src="images/3.jpg">
         </a>
         <hr>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <p></p>
       </div>
     </section>
   </section>
