added the notepad project to my projects section

--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,15 @@
       <p>- c++</p>
       <p>pass-gen is a random alphanumeric password generator which get the values of the characters based on the ascii table.</p>
     </section>
+    <section id="project">
+      <a href="https://github.com/miguelmunozh/Notepad" target="_blank">
+      <h2>Notepad</h2>
+      <hr>
+      <img src="images/notepad.png" alt="">
+    </a>
+      <p>- Java</p>
+      <p>Notepad is a minimalistic version of the classic notepad application from windows.</p>
+    </section>
   </section>
 
   </section>
