added a small application to the projects sections

--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,16 @@
 <section id="projects">
 
     <section id="project">
+      <a href="https://github.com/miguelmunozh/Student-System-Registration-with-MySql" target="_blank">
+      <h2>Student System Registration</h2>
+      <hr>
+      <img src="images/ssr.PNG" alt="">
+    </a>
+      <p>- Java, MySql</p>
+      <p>This is a console based interface small application that simulates a
+        student system registration system and records the students in a local database.</p>
+    </section>
+    <section id="project">
       <a href="https://github.com/miguelmunozh/pass-gen" target="_blank">
       <h2>Pass-Gen</h2>
       <hr>
