--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,18 @@
       <p>Notepad is a minimalistic version of the classic notepad application from windows.</p>
     </section>
   </section>
+  <section id="project">
+    <a href="https://github.com/miguelmunozh/Library-Management-System" target="_blank">
+    <h2>Library-Management-System</h2>
+    <hr>
+    <img src="images/Capture2.png" alt="">
+  </a>
+    <p>- Java, MySql</p>
+    <p>Library-Management-System is an application that simulates what you would see in a library if go to search for a book on their system.
 
+.</p>
+  </section>
+</section>
   </section>
 
   <footer id="contact">
