--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,16 @@
     By clicking on a project you will be redirected to the github page where the project and installation instructions reside. </p>
     <hr>
 <section id="projects">
-
+  
+    <section id="project">
+      <a href="https://github.com/miguelmunozh/Library-Management-System" target="_blank">
+      <h2>Library-Management-System</h2>
+      <hr>
+      <img src="images/Capture2.PNG" alt="">
+    </a>
+      <p>- Java, MySql</p>
+      <p>Library-Management-System is an application that simulates what you would see in a library if go to search for a book on their system.</p>
+    </section>
     <section id="project">
       <a href="https://github.com/miguelmunozh/Student-System-Registration-with-MySql" target="_blank">
       <h2>Student System Registration</h2>
@@ -60,17 +69,6 @@
       <p>- Java</p>
       <p>Notepad is a minimalistic version of the classic notepad application from windows.</p>
     </section>
-  </section>
-  <section id="project">
-    <a href="https://github.com/miguelmunozh/Library-Management-System" target="_blank">
-    <h2>Library-Management-System</h2>
-    <hr>
-    <img src="images/Capture2.png" alt="">
-  </a>
-    <p>- Java, MySql</p>
-    <p>Library-Management-System is an application that simulates what you would see in a library if go to search for a book on their system.
-
-.</p>
   </section>
 </section>
   </section>
