--- a/projects.html
+++ b/projects.html
@@ -31,10 +31,10 @@
     By clicking on a project you will be redirected to the github page where the project and installation instructions reside. </p>
     <hr>
 <section id="projects">
-  
+
     <section id="project">
       <a href="https://github.com/miguelmunozh/Library-Management-System" target="_blank">
-      <h2>Library-Management-System</h2>
+      <h2>Library-Management-Sys</h2>
       <hr>
       <img src="images/Capture2.PNG" alt="">
     </a>
