Added a project to the website.

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,17 @@
     By clicking on a project you will be redirected to the github page where the project and installation instructions reside. </p>
     <hr>
 <section id="projects">
+    <section id="project">
+      <a href="https://github.com/miguelmunozh/blog-springboot-backend.git" target="_blank">
+        <h2>Blog Application</h2>
+        <hr>
+        <img src="images/Capture4.PNG" alt="">
+      </a>
+      <p>- Angular, Springboot</p>
+      <p>This is a full stack application where the front end is built with angular and the backend is done with Java and spring <blockquote cite="http://">
 
+      </blockquote>.</p>
+    </section>
     <section id="project">
       <a href="https://github.com/miguelmunozh/Library-Management-System" target="_blank">
       <h2>Library-Management-Sys</h2>
